add numeric, reverse numeric & updated swagger
